Add deleteCollection operation.
