# openapi.json
@@ -394,6 +394,61 @@
             "AuthTokenBearer": []
           }
         ]
+      },
+      "delete": {
+        "tags": [
+          "DataSink"
+        ],
+        "summary": "Delete Collection",
+        "description": "Delete an empty collection.",
+        "operationId": "deleteCollection",
+        "parameters": [
+          {
+            "required": true,
+            "schema": {
+              "title": "Collection Name",
+              "maxLength": 255,
+              "minLength": 1,
+              "type": "string"
+            },
+            "name": "collection_name",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response"
+          },
+          "204": {
+            "description": "Collection has been deleted."
+          },
+          "401": {
+            "description": "Not authenticated."
+          },
+          "404": {
+            "description": "Collection not found."
+          },
+          "409": {
+            "description": "Collection is not empty."
+          },
+          "422": {
+            "description": "Validation error."
+          },
+          "500": {
+            "description": "Internal server error."
+          },
+          "501": {
+            "description": "Not implemented."
+          },
+          "503": {
+            "description": "Service unavailable."
+          }
+        },
+        "security": [
+          {
+            "AuthTokenBearer": []
+          }
+        ]
       }
     },
     "/data/": {
